# FileReader

./: .gitignore  CMakeLists.txt  Makefile  README.md
FileReader/: CMakeLists.txt
include/: FileReader.h
src/: FileReader.c  takeLine.c
test/: CMakeLists.txt  FileReaderTest.cpp  TakeLineTest.cpp
